# LearnOpenGL_My

./: CMakeLists.txt  README.md
LearnOpenGL_1start/: CMakeLists.txt
LearnOpenGL_1start/dep/: Release_x64.txt
LearnOpenGL_1start/dep/include/glad/: glad.h
LearnOpenGL_1start/dep/lib/: glfw3.lib  tess2.lib
LearnOpenGL_1start/dep_res/: tess2.7z
LearnOpenGL_1start/dep_res/SOIL-master/projects/VC14/x64/Debug/: SOIL.idb
LearnOpenGL_1start/dep_res/SOIL-master/projects/VC14/x64/Debug/SOIL.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  SOIL.lastbuildstate
LearnOpenGL_1start/dep_res/SOIL-master/projects/VC8/Debug/: SOIL.idb  SOIL.lib
LearnOpenGL_1start/dep_res/SOIL-master/projects/VC8/Debug/SOIL.tlog/: CL.read.1.tlog  Lib-link.write.1.tlog  SOIL.lastbuildstate
LearnOpenGL_1start/dep_res/SOIL-master/projects/VC8/Release/SOIL.tlog/: CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
LearnOpenGL_1start/dep_res/libtess2/Source/: libtessweep.c  tess.c
LearnOpenGL_1start/include/: camera.h
LearnOpenGL_1start/shader/: texture.vs  texture_transform.fs  texture_transform.vs
LearnOpenGL_1start/src/: LearnOpenGL_My.cpp  glshader.cpp
LearnOpenGL_3model/: README.md
LearnOpenGL_3model/dep/include/assimp/: revision.h
LearnOpenGL_3model/dep/lib/: assimp-vc142-mt.exp  assimp-vc142-mt.lib
LearnOpenGL_3model/include/: glCallbackHandle.h  glshader.h  logger.hpp
LearnOpenGL_3model/shader/: texture.fs  triangle.fs  triangle.vs
LearnOpenGL_3model/src/: glProgram.cpp
LearnOpenGL_3model/src/texture/: texture.cpp
LearnOpenGL_3model/src/texture_transform/: texture_transform.cpp  texture_transform_draw.cpp
dep/include/tess2/: libtessweep.h
dep_res/: libtess2.7z
dep_res/SOIL-master/projects/VC14/x64/Debug/: SOIL.lib
dep_res/SOIL-master/projects/VC14/x64/Debug/SOIL.tlog/: Lib-link.write.1.tlog  lib.command.1.tlog
dep_res/SOIL-master/projects/VC8/: UpgradeLog.htm
dep_res/SOIL-master/projects/VC8/Debug/SOIL.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  lib.command.1.tlog
dep_res/SOIL-master/projects/VC8/Release/: SOIL.lib
dep_res/SOIL-master/projects/VC8/Release/SOIL.tlog/: CL.command.1.tlog  CL.read.1.tlog  SOIL.lastbuildstate
dep_res/SOIL-master/projects/VC9/: SOIL.ncb
include/: LearnOpenGL_base.h  glCallbackHandle.h  glProgram.h
include/texture/: texture.h
include/texture_transform/: texture_transform.h
include/triangle/: triangle.h
shader/: texture.fs  triangle.fs  triangle.vs
src/: LearnOpenGL_My.cpp  LearnOpenGL_base.cpp  glProgram.cpp  triangle_draw.cpp
src/glad/: glad.c
src/texture/: texture.cpp  texture_draw.cpp
src/triangle/: triandle.cpp  triangle_draw.cpp
